--- a/src/Home/index.css
+++ b/src/Home/index.css
@@ -9,10 +9,40 @@
   box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
 
+.loader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .cart-image {
   height: 40px;
   width: 40px;
   color: rgb(54, 53, 53);
+  margin-left: 15px;
+}
+
+.cart-cont {
+  display: flex;
+  align-items: center;
+}
+
+.cart {
+  display: flex;
+  align-items: center;
+}
+
+.cart-count {
+  background-color: rgb(209, 88, 23);
+  color: white;
+  border-radius: 100%;
+  padding: 2px;
+}
+
+@media screen and (max-width: 600px) {
+  .my-order {
+    display: none;
+  }
 }
 
 .slide-lists {
