--- a/src/SlideBar/index.css
+++ b/src/SlideBar/index.css
@@ -3,6 +3,19 @@
   background-color: white;
   color: black;
   font-weight: 800;
-  font-size: 16px;
-  width: 200px;
+  font-size: 24px;
+  margin-right: 50px;
+}
+
+.active-btn {
+  background-color: white;
+  font-weight: 800;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-color: red;
+  color: red;
+  border-radius: 3px;
+  font-size: 24px;
+  margin-right: 50px;
 }
