--- a/src/components/DishItem/index.css
+++ b/src/components/DishItem/index.css
@@ -2,15 +2,20 @@
   border: 1px solid gray;
   border-radius: 12px;
   justify-content: space-between;
+  display: flex;
+  padding: 25px;
+  margin-bottom: 25px;
 }
 
 .veg-border {
   border: 1px solid #00923f;
   align-self: flex-start;
+  margin-right: 25px;
 }
 
 .non-veg-border {
   border: 1px solid #92282a;
+  margin-right: 25px;
 }
 
 .veg-round {
@@ -60,6 +65,9 @@
   justify-content: space-between;
   padding: 10px;
   border-radius: 50px;
+  display: flex;
+  align-items: center;
+  background-color: green;
 }
 
 .button {
@@ -99,6 +107,19 @@
   font-family: 'Roboto';
   font-size: 18px;
   align-self: center;
+  color: rgb(222, 138, 12);
+}
+
+.image-cont {
+  width: 15%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media screen and (max-width: 768px) {
+  .image-cont {
+    width: 20%;
+  }
 }
 
 .dish-image {
@@ -106,4 +127,11 @@
   height: 150px;
   border-radius: 12px;
   align-self: flex-start;
+}
+
+@media screen and (max-width: 768px) {
+  .dish-image {
+    width: 100px;
+    height: 100px;
+  }
 }
